--- a/css/agency.css
+++ b/css/agency.css
@@ -200,7 +200,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/header-test.png');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -542,6 +542,7 @@ section#contact .form-group input.form-control {
   height: auto;
   width: 40%;
   margin: 0 0 0 30%;
+
 }
 section#contact .form-group textarea.form-control {
   height: 236px;
