registration is finished

--- a/css/officialCSS.css
+++ b/css/officialCSS.css
@@ -187,7 +187,7 @@ header {
     font-family: montserrat;
     color: #2C3E50;
     font-size: 13px;
-    background-color: powderblue;
+    background-color: cornflowerblue;
 
 }
 /*buttons*/
