--- a/css/agency.css
+++ b/css/agency.css
@@ -256,8 +256,8 @@ section {
 }
 section h2.section-heading {
   font-size: 40px;
-  margin-top: 0;
-  margin-bottom: 15px;
+  margin-top: 160px;
+  margin-bottom: -80px
 }
 section h3.section-subheading {
   font-size: 16px;
@@ -509,10 +509,12 @@ section h3.section-subheading {
   }
 }
 .team-member {
+  width: 25%;
   text-align: center;
   margin-bottom: 50px;
 }
 .team-member img {
+  height: 270px;
   margin: 0 auto;
   border: 7px solid white;
 }
