--- a/css/officialCSS.css
+++ b/css/officialCSS.css
@@ -451,6 +451,7 @@ section h2.section-heading {
     margin-top: 160px;
     margin-bottom: -80px
 }
+/*-+-+-+-+-+-+-+-*/
 #forum{
     background-image: url("../img/forumBackground.jpg");
 }
@@ -500,7 +501,17 @@ section h2.section-heading {
 .question{
     font-size: 27px;
 }
-
+#questionsAndComments{
+    background: url("../img/forum_img.jpg");
+    background-size: 100%;
+}
+#questionsAndCommentsHeader{
+    text-align: center;
+    font-size: 40pc;
+    color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+/*-+-+-+-+-+-+-+-*/
 h2{
     font-size: 2rem;
     margin-top: 20px;
