add theme functionality

--- a/css/officialCSS.css
+++ b/css/officialCSS.css
@@ -550,3 +550,51 @@ h2{
 #searchedProfile{
     background-image:url('../img/profile-background.jpg')
 }
+#submit-btn-forum {
+    text-align: left;
+    margin-left: 40px;
+}
+.add-question-forum{
+    width:420px;
+    margin-left: 650px;
+}
+
+h1{
+    padding:30px 0px 0px 0px;
+    font:25px Oswald;
+    color:#FFF;
+    text-transform:uppercase;
+    text-shadow:#000 0px 1px 5px;
+    margin:0px;
+}
+
+#text-add-question {
+    width:100%;
+    padding:15px 0px 15px 8px;
+    border-radius:5px;
+    box-shadow:inset 4px 6px 10px -4px rgba(0,0,0,0.3), 0 1px 1px -1px rgba(255,255,255,0.3);
+}
+
+input[type="button"]{
+    width:100%;
+    padding:15px;
+    border-radius:5px;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4169E1), to(#4169E1));
+    font:14px Oswald;
+    color:#FFF;
+    text-transform:uppercase;
+    margin-top: 10px;
+}
+
+input[type="button"]:hover{
+    opacity:1;
+    cursor:pointer;
+}
+
+#header-add-question {
+    text-align: center;
+}
+#choose-section-name-id {
+    margin-top: -25px;
+}
+
